fix(portal): wrap long strings in Table of Contents to prevent floating
(cherry picked from commit 68bb42c544660a6735ccde40e4a0cd0f223879ec)

--- a/gravitee-apim-portal-webui/src/app/components/gv-page-markdown/gv-page-markdown.component.css
+++ b/gravitee-apim-portal-webui/src/app/components/gv-page-markdown/gv-page-markdown.component.css
@@ -53,13 +53,6 @@
   overflow-wrap: break-word;
   white-space: pre-wrap;
 }
-:host ::ng-deep .toc-link {
-  display: block !important;
-  max-width: 100% !important;
-  white-space: normal !important;
-  word-break: break-word !important;
-}
-
 app-gv-markdown-toc {
   position: fixed;
   right: 42px;
